# aeronWrapper

./: .gitignore  CMakeLists.txt  README.md  aeronWrapperConfig.cmake.in  aeron_wrapper.cpp  aeron_wrapper.h
_install/lib/cmake/aeronWrapper/: aeronWrapperConfig.cmake  aeronWrapperTargets-release.cmake  aeronWrapperTargets.cmake
src/: aeron_wrapper.cpp  aeron_wrapper.h
